--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"chart.js": "^4.4.7",
+		"chartjs-plugin-dragdata": "^2.3.1",
+		"d3": "^7.9.0",
+		"xlsx": "^0.18.5"
 	}
 }
